--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server:dev": "fastify start -p 8080 -w -l info -P server/index.mjs",
+    "server": "node server/server.mjs"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
+    "@web3auth/base": "^6.1.1",
+    "@web3auth/modal": "^6.1.1",
+    "fastify": "^4.19.0",
+    "fastify-plugin": "^4.5.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web3": "^4.0.2"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -22,6 +33,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "fastify-cli": "^5.7.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
